--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -30,9 +30,9 @@
           <p class="text-muted">No reviews</p>
           <h6 class="card-title">
             <span class="fw-lighter fs-6 text-decoration-line-through"
-              >Rs.<%= product.price %></span
+              >$<%= product.price %></span
             >
-            Rs.<%= product.price/2 %>
+            $<%= product.price/2 %>
             <span class="fw-light fs-6 text-warning">( 50 % OFF )</span>
           </h6>
           <a href="/products/<%=product._id%>" class="btn btn-sm btn-primary"
